# faiss

faiss/: CMakeLists.txt  Clustering.cpp  Clustering.h
faiss/utils/: distances.cpp
faiss/utils/onednn/: bfoat16.h  onednn_utils.h
tests/: CMakeLists.txt  test_callback.cpp
